--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
   <body ng-app="treparkin" ng-controller="MainCtrl">
 
+
       <h1 class="center title">
         <span class="parkin">P</span> 
         <span class="light">Tre</span>Parkin
@@ -46,6 +47,18 @@
     <script src="https://code.angularjs.org/1.3.14/angular.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.min.js"></script>
     <script src="app.js"></script>
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-63121381-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
+    
   </body>
 
 </html>
